[package]
name = "layout-corrector"
version = "0.1.0"
authors = ["Anton K <xecu91 at gmail com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["native-tls-vendored", "blocking", "json"]}
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0"
